@@ -268,23 +268,6 @@ non-nil.")
 			   (max (1+ (- (cdr active) (car active))) 0)
 			   (car active) (cdr active) group)))))))
 
-(deffoo nnml-retrieve-groups (groups &optional server)
-  (when nnml-get-new-mail
-    (if (nnmail-get-new-mail-per-group)
-	(dolist (group groups)
-	  (nnml-request-scan group server))
-      (nnml-request-scan nil server)))
-  (with-current-buffer nntp-server-buffer
-    (erase-buffer)
-    (dolist (group groups)
-      (let* ((entry (assoc group nnml-group-alist))
-	     (active (nth 1 entry)))
-	(if (consp active)
-	    (insert (format "211 %d %d %d %s\n"
-			    (max (1+ (- (cdr active) (car active))) 0)
-			    (car active) (cdr active) group))))))
-  'group)
-
 (deffoo nnml-request-scan (&optional group server)
   (setq nnml-article-file-alist nil)
   (nnml-possibly-change-directory group server)
